--- a/01. data-science-principles/in3061_inm430_coursework_2021-owdtelly/week05/lab5.ipynb
+++ b/01. data-science-principles/in3061_inm430_coursework_2021-owdtelly/week05/lab5.ipynb
@@ -749,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 633,
+   "execution_count": 648,
    "metadata": {},
    "outputs": [
     {
@@ -784,36 +784,36 @@
        "      <th>0</th>\n",
        "      <td>1710</td>\n",
        "      <td>208500</td>\n",
-       "      <td>2.097623e+07</td>\n",
-       "      <td>-2.076773e+07</td>\n",
+       "      <td>198512.698467</td>\n",
+       "      <td>9987.301533</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1262</td>\n",
        "      <td>181500</td>\n",
-       "      <td>1.826334e+07</td>\n",
-       "      <td>-1.808184e+07</td>\n",
+       "      <td>153498.831815</td>\n",
+       "      <td>28001.168185</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>1786</td>\n",
        "      <td>223500</td>\n",
-       "      <td>2.248339e+07</td>\n",
-       "      <td>-2.225989e+07</td>\n",
+       "      <td>206148.979416</td>\n",
+       "      <td>17351.020584</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>1717</td>\n",
        "      <td>140000</td>\n",
-       "      <td>1.409353e+07</td>\n",
-       "      <td>-1.395353e+07</td>\n",
+       "      <td>199216.040133</td>\n",
+       "      <td>-59216.040133</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>2198</td>\n",
        "      <td>250000</td>\n",
-       "      <td>2.514604e+07</td>\n",
-       "      <td>-2.489604e+07</td>\n",
+       "      <td>247545.660354</td>\n",
+       "      <td>2454.339646</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -826,36 +826,36 @@
        "      <th>1455</th>\n",
        "      <td>1647</td>\n",
        "      <td>175000</td>\n",
-       "      <td>1.761024e+07</td>\n",
-       "      <td>-1.743524e+07</td>\n",
+       "      <td>192182.623469</td>\n",
+       "      <td>-17182.623469</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1456</th>\n",
        "      <td>2073</td>\n",
        "      <td>210000</td>\n",
-       "      <td>2.112695e+07</td>\n",
-       "      <td>-2.091695e+07</td>\n",
+       "      <td>234985.987740</td>\n",
+       "      <td>-24985.987740</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1457</th>\n",
        "      <td>2340</td>\n",
        "      <td>266500</td>\n",
-       "      <td>2.680392e+07</td>\n",
-       "      <td>-2.653742e+07</td>\n",
+       "      <td>261813.448445</td>\n",
+       "      <td>4686.551555</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1458</th>\n",
        "      <td>1078</td>\n",
        "      <td>142125</td>\n",
-       "      <td>1.430704e+07</td>\n",
-       "      <td>-1.416492e+07</td>\n",
+       "      <td>135010.993726</td>\n",
+       "      <td>7114.006274</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1459</th>\n",
        "      <td>1256</td>\n",
        "      <td>147500</td>\n",
-       "      <td>1.484711e+07</td>\n",
-       "      <td>-1.469961e+07</td>\n",
+       "      <td>152895.967530</td>\n",
+       "      <td>-5395.967530</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -864,28 +864,28 @@
       ],
       "text/plain": [
        "      GrLivArea  SalePrice  predicted_value     residuals\n",
-       "0          1710     208500     2.097623e+07 -2.076773e+07\n",
-       "1          1262     181500     1.826334e+07 -1.808184e+07\n",
-       "2          1786     223500     2.248339e+07 -2.225989e+07\n",
-       "3          1717     140000     1.409353e+07 -1.395353e+07\n",
-       "4          2198     250000     2.514604e+07 -2.489604e+07\n",
+       "0          1710     208500    198512.698467   9987.301533\n",
+       "1          1262     181500    153498.831815  28001.168185\n",
+       "2          1786     223500    206148.979416  17351.020584\n",
+       "3          1717     140000    199216.040133 -59216.040133\n",
+       "4          2198     250000    247545.660354   2454.339646\n",
        "...         ...        ...              ...           ...\n",
-       "1455       1647     175000     1.761024e+07 -1.743524e+07\n",
-       "1456       2073     210000     2.112695e+07 -2.091695e+07\n",
-       "1457       2340     266500     2.680392e+07 -2.653742e+07\n",
-       "1458       1078     142125     1.430704e+07 -1.416492e+07\n",
-       "1459       1256     147500     1.484711e+07 -1.469961e+07\n",
+       "1455       1647     175000    192182.623469 -17182.623469\n",
+       "1456       2073     210000    234985.987740 -24985.987740\n",
+       "1457       2340     266500    261813.448445   4686.551555\n",
+       "1458       1078     142125    135010.993726   7114.006274\n",
+       "1459       1256     147500    152895.967530  -5395.967530\n",
        "\n",
        "[1429 rows x 4 columns]"
       ]
      },
-     "execution_count": 633,
+     "execution_count": 648,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cleansed['predicted_value'] = model.predict(SalePrice)\n",
+    "cleansed['predicted_value'] = model.predict(FloorArea)\n",
     "\n",
     "\n",
     "cleansed['residuals'] = cleansed['SalePrice'] - cleansed['predicted_value'] \n",
